Frontend pages for Login Register, Navbar and a simple home page